<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contri_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3d21"
                android:layout_width="193dp"
                android:layout_height="42dp"
                android:layout_marginTop="36dp"
                android:gravity="center_horizontal"
                android:text="@string/contribute_data4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-smallcaps"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.44"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/viqew233"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/resourceName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viqew233">

                <AutoCompleteTextView
                    android:id="@+id/dropperOR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/name_of_resource"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="300dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Name_id_ed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resourceName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/name_of_store_or_person"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="300dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mob_id_ed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"         app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Name_id_ed">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/contact_number"
                    android:inputType="number"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="300dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_id_ed_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mob_id_ed">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/address"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="300dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:errorEnabled="true"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"   app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_id_ed_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/details"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="300dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/StateCity"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:errorEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details"
                app:layout_constraintVertical_bias="0.07">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/city"
                    android:inputType="text"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="300dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bnt_for_creation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="157dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="166dp"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/StateCity"
                android:backgroundTint="#78B6B4"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>